--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
+    "dom-to-image-more": "^3.6.0",
     "html2canvas": "^1.4.1",
     "next": "15.3.2",
     "react": "^19.0.0",
